Fixed stackoverflow?

--- a/CSS/index062019.css
+++ b/CSS/index062019.css
@@ -71,7 +71,6 @@ header nav{
   text-align: center;
   padding: 16px;
   transition: all 0.3s ease;
-  color: white;
   font-size: 20px;
 }
 .icon-bar a:hover{
